Added MongoDB database via mongoose

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Steven Gort",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "mongoose": "^6.2.0"
   },
   "devDependencies": {
     "body-parser": "^1.19.1",
